--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -687,7 +687,7 @@ dev.off()
 ```
 
 
-```{r popvisual3, fig.cap  = "Three ways of visualizing a population distribution", echo = FALSE, out.height="80%", out.extra="80%"}
+```{r popvisual3, fig.cap  = "Three ways of visualizing a population distribution", echo = FALSE, out.height="80%", out.width="80%"}
 knitr::include_graphics("ch_populations/images/popvisual.png")
 ```
 
