--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -4856,7 +4856,7 @@ Overall, the rules for interpreting standard deviation are similar to those for 
 Populations are typically quite large in nature and it's often imposssible to pratically list all of the members of the population. Consequently, it helps to have ways to visual the entire population. In Figure \ref{fig:popvisual3} we present three ways of visualizing a population. In all three graphs (A, B, C) in this figure the x-axis represents heights in centimeter and the y-axis is used to indicate which values on the x-axis are more common. In Figure \ref{fig:popvisual3}A we use a large number of X's to indicate the members of the population. Because X's are also used in formulas to represent individual participants a strength of this graph is that it reminds you that it is a graph reflecting a large number of individuals. In Figure \ref{fig:popvisual3}B we present a standard histogram that illustrate the distribution of heights. In Figure \ref{fig:popvisual3}C we present a density curve that illustrate the distribution of heights. All three approaches are useful for illustrating that most people have heights around 170 cm.
 
 \begin{figure}
-\includegraphics[width=25in,height=0.8\textheight]{ch_populations/images/popvisual} \caption{Three ways of visualizing a population distribution}\label{fig:popvisual3}
+\includegraphics[width=0.8\linewidth,height=0.8\textheight]{ch_populations/images/popvisual} \caption{Three ways of visualizing a population distribution}\label{fig:popvisual3}
 \end{figure}
 
 \hypertarget{population-comparisons}{%
@@ -5023,7 +5023,7 @@ Researchers are usually interested in describing the attributes of a population;
 
 Sample statistics, however, often differ from population parameters. The difference between a sample statistic and the population parameter occurs because the sample data is random subset of the population data --- with correspondingly fewer observations. Sometimes the sample statistic will be higher than the population parameter; other times the sample statistic will be lower than the population parameter. Because random sampling is used to select the sample data the direction and magnitude of the difference between the sample statistic the population parameter will vary randomly.
 
-Further complicating matters is the fact that the formula used for a sample statistic may or may not be the same as the formula used for the corresponding population parameter. This occurs because the purpose of the sample statistic is typically not to describe the sample. Rather the purpose of the sample statistic is to estimate the population parameter. Depending on the parameter, you may or may not be able to use the same formula with sample data as you would with population data.
+Further complicating matters is the fact that the formula used for a sample statistic may, or may not, be the same as the formula used for the corresponding population parameter. This occurs because the purpose of the sample statistic is typically not to describe the sample. Rather the purpose of the sample statistic is to estimate the population parameter. Depending on the parameter, you may or may not be able to use the same formula with sample data as you would with population data.
 
 \hypertarget{data-for-the-chapter}{%
 \section{Data for the chapter}\label{data-for-the-chapter}}
@@ -5088,7 +5088,7 @@ We can use the head() command to see the first 10 rows of the 100,00 rows. We se
 \hypertarget{notation-1}{%
 \section{Notation}\label{notation-1}}
 
-In the formulas below, when we refer the population, we use uppercase letters when indicating members (\(X\)) or the size (\(N\)). In contrast, when we refer to the sample, we use lowercsae letters when indicating members (\(x\)) or the size (\(n\)). Make sure you notice the similarities between population and sample formulas even when the notation differs.
+In the formulas below, when we refer the population, we use uppercase letters to indicate members (\(X\)) or the size (\(N\)). In contrast, when we refer to the sample, we use lowercase letters to indicate members (\(x\)) or the size (\(n\)). Make sure you notice the similarities between population and sample formulas even when the notation differs.
 
 \hypertarget{estimating-the-mean}{%
 \section{Estimating the mean}\label{estimating-the-mean}}
@@ -5115,14 +5115,14 @@ We can calculate the population mean for the height column of pop\_data using th
 ## 1    172.5
 \end{verbatim}
 
-As noted previously, we rarely has access to data from an entire population. Consequently, we use the sample mean as an estimate of the population mean. The sample mean, \(\bar{x}\), is a statistic calculated using the using Formula \eqref{eq:samplemeanch5}. The bar of above the \(x\), indicates that it is a mean. Notice that Formula \eqref{eq:popmeanch5} and Formula \eqref{eq:samplemeanch5} are the same - even though they use different notation.
+As noted previously, we rarely have access to data from an entire population. Consequently, we use the sample mean as an estimate of the population mean. The sample mean, \(\bar{x}\), is a statistic calculated using the using Formula \eqref{eq:samplemeanch5} below. The bar of above the \(x\), indicates that it is a mean. Notice that Formula \eqref{eq:popmeanch5} and Formula \eqref{eq:samplemeanch5} are the same - even though they use different notation.
 
 \begin{equation} 
 \bar{x} = \frac{\sum{x}}{n}
       \label{eq:samplemeanch5}
 \end{equation}
 
-Because a sample mean (a statistic) is calculated using a random subset of the population it is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful from a single study, this fact may be concerning. Statisticians know, however, that you can rarely learn anything from a single study or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies. Therefore, we simulate drawing a large number of samples from a population with the code below.
+Because a sample mean (a statistic) is calculated using a random subset of the population it is likely to differ from the population mean (a parameter). If you, inaccurately, believe that you can learn something meaningful from a single study, this fact may be disconcerting. Statisticians know, however, that rarely can you learn anything from a single study, or even a small set of studies. Consequently, they are more interested in what is true, on average, over a large number of studies. Therefore, we simulate drawing a large number of samples from a population with the code below.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5155,7 +5155,7 @@ We use the head() command to see the first 10 rows (i.e., 10 samples of 5000 sam
 ## 10    10 10       168.5       262.65         291.83
 \end{verbatim}
 
-Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic. You can see the for each sample/row we indicate n (the sample size) and sample.mean (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.mean column and then we send them to the base R hisogram command, hist().
+Each row of many\_samples represents a sample of 10 people. Each column of many\_samples indicates a sample statistic. You can see that for each sample/row we indicate ``n'' (the sample size) and ``sample.mean'' (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. You can see the full extent to which the sample means vary by creating a graph with the code below. In this code, we use the pull() command to extract the value from the sample.mean column and then we send them to the base R hisogram command, hist().
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5169,7 +5169,7 @@ Each row of many\_samples represents a sample of 10 people. Each column of many\
 
 You can see the 5000 sample means, from the sample.mean column, plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantially from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size. Many of the sample means fall quite far from the population mean.
 
-Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample mean deviates from the population mean. That said, statisticians are very concerned whether the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean. If, on average, the sample mean is accurate we refer to it as an unbiased estimator.
+Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample mean deviates from the population mean. That said, statisticians are very concerned as to whether or not the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean. If, on average, the sample mean is accurate we refer to it as an unbiased estimator.
 
 In the code below we calculate the average of the 5000 sample means to determine if the sample mean is an unbiased estimator.
 
@@ -5186,12 +5186,12 @@ In the code below we calculate the average of the 5000 sample means to determine
 ## 1               172.4
 \end{verbatim}
 
-We find that the average of the 5000 sample means is 172.41 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean (Formula \eqref{eq:samplemeanch5}) as we did the population mean (Formula \eqref{eq:popmeanch5}), although the notation differed. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean. If we try to estimate the population mean with a sample mean we will, on average, be correct; although any given sample/study mean might be ``wrong''.
+We find that the average of the 5000 sample means is 172.41 which is very close to the population mean of 172.48. Note that when we did this, we used the same formula to calculate the sample mean (Formula \eqref{eq:samplemeanch5}) as we did the population mean (Formula \eqref{eq:popmeanch5}), although the notations differed. The average of the sample means was not identical to the population mean but it was very close - it would have been exactly the same with many more samples. Consequently, the sample mean provides an unbiased estimate of the population mean. In other words, it makes sense to use the sample mean as an estimate of the population mean. If we try to estimate the population mean with a sample mean we will, on average, be correct; although any given sample/study mean might be ``wrong''.
 
 \hypertarget{estimating-variance}{%
 \section{Estimating variance}\label{estimating-variance}}
 
-We are interested in the sample variance (\(s^2\)) to the extent that it provides an estimate of the population variance (\(\sigma^2\)). The population variance is calculated using Formula \eqref{eq:popvarch5}:
+We are interested in the sample variance (\(s^2\)) to the extent that it provides an estimate of the population variance (\(\sigma^2\)). We begin by reviewing population variance. The population variance is calculated using Formula \eqref{eq:popvarch5}:
 
 \begin{equation} 
 \sigma^2 = \frac{\sum{(X - \mu)^2}}{N}
@@ -5221,7 +5221,7 @@ s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
 \end{aligned} 
 \]
 
-The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. In the many\_samples data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code to obtain the average of the sample.var.n column over the 5000 samples. If this average equals the population variance of 157.5 then variance, using \(n\) in the denominator, is an unbiased estimator of the population variance.
+The formula for sample variance with an \(n\) in the denominator is, unfortunately, a biased estimator of population variance. That is, estimates of the population variance are systematically too low when you use a sample variance formula with an \(n\) in the denominator. We can see that this is true by examining the many\_samples data. In these data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code to obtain the average of the sample.var.n column over the 5000 samples. If this average equals the population variance of 157.5 then variance, using \(n\) in the denominator, is an unbiased estimator of the population variance.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5236,7 +5236,7 @@ The formula for sample variance with an \(n\) in the denominator is, unfortunate
 ## 1         141.1
 \end{verbatim}
 
-The average of sample.var.n column (141.86) was much smaller than the population variance (157.5). That is, the average of the sample variances, using \(n\) in the denominator, was smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance, using \(n\) in the denominator, we will, on average, be wrong.
+You can see the average of sample.var.n column (141.86) is much smaller than the population variance (157.5). That is, the average of the sample variances, using \(n\) in the denominator, was smaller than the population variance. Consequently, sample variance, using \(n\) in the denominator, provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance, using \(n\) in the denominator, we will, on average, be wrong.
 
 Fortunately, there is a sample-level formula that estimates the population variance without bias (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by \(n - 1\) instead of \(n\). The unbiased estimate is calculated using Formula \eqref{eq:samplevarn1ch5}.
 
@@ -5267,7 +5267,14 @@ You may wonder at this point, when we use \(n-1\) in the denominator of the samp
 \hypertarget{estimating-standard-deviation}{%
 \section{Estimating standard deviation}\label{estimating-standard-deviation}}
 
-Due to the above findings for variance, we tend to estimate the population standard deviation using Formula \eqref{eq:samplesd1ch5}.
+The population standard deviation is calculated using Formula \eqref{eq:popsdch5} below.
+
+\begin{equation} 
+\sigma = \sqrt{\frac{\sum{(X- \mu)^2}}{N}}
+      \label{eq:popsdch5}
+\end{equation}
+
+Due to the above findings for variance, we estimate the population standard deviation using Formula \eqref{eq:samplesd1ch5} below.
 
 \begin{equation} 
 s = \sqrt{\frac{\sum{(x - \bar{x})^2}}{n-1}}
@@ -5353,7 +5360,7 @@ Likewise, the population-level standardized mean difference (\(\delta\)) is 1.49
 \includegraphics[width=0.95\linewidth]{ch_samples/images/sex_pops} \caption[Illustration of standardized mean difference of $\delta =1.49$]{Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\mu$) for the two populations.}\label{fig:sexpop}
 \end{figure}
 
-We typical need to estimate the population-level standardized mean difference from sample data because we rarely have access to data for an entire population. Many researchers estimate the population standardized mean difference from sample data using the Formula \eqref{eq:samplesmdch5} below. This value is known by many other names: \(d\), Cohen's \(d\), and Hedges \(g\). Notice that the sample-level formula, Formula \eqref{eq:samplesmdch5}, below, is the same as the population-level formula, Formula \eqref{eq:popsmdch5}, above, only the notation differs.
+We typically need to estimate the population-level standardized mean difference from sample data because we rarely have access to data for an entire population. Many researchers estimate the population standardized mean difference from sample data using the Formula \eqref{eq:samplesmdch5} below. This value is known by many other names: \(d\), Cohen's \(d\), and Hedges \(g\). Notice that the sample-level formula, Formula \eqref{eq:samplesmdch5}, below, is the same as the population-level formula, Formula \eqref{eq:popsmdch5}, above, only the notation differs.
 
 \begin{equation} 
 d  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} 
@@ -5374,7 +5381,7 @@ If we try to apply either \(d\)-value formula (\eqref{eq:samplesmdch5} or \eqref
 
 When we calculated the population-level standardized mean difference, there was only one standard deviation (i.e., only one variance). More specifically, the male and female populations both had a standard deviation but it was the same for both populations. The population-level formula for the standardized mean difference, Formula \eqref{eq:popsmdch5}, has only one standard deviation in it. This is because calculation of the standardized mean difference explicitly depends on the fact the both population have the same standard deviation.
 
-Let's consider hypothetical sample data to make the situation clear. More specifically, we will examine the sample-level statistics below for males and females. Notice that we have two standard deviations -- one for males and one for females. Moreover, these two sample-level standard deviation (using \(n\)-1) are not the same - they are different from each other. This initially seems problematicm - calculation of standardized mean difference requires that population standard deviaitons are identical. Fortunately, this is sample-level data and not population-level data.
+Let's consider hypothetical sample data to make the situation clear. More specifically, we will examine the sample-level statistics below for males and females. Notice that we have two standard deviations -- one for males and one for females. Moreover, these two sample-level standard deviation (using \(n\)-1) are not the same - they are different from each other. This initially seems problematic - calculation of standardized mean difference requires that population standard deviaitons are identical. Fortunately, this is sample-level data and not population-level data.
 
 \[
 \begin{aligned} 
@@ -5394,11 +5401,11 @@ s_{females} &= 8.2 \\
 \end{aligned} 
 \]
 
-We need to recognize that the sample-level standard deviations are likely to differ from the population-level standard deviation due to sampling error. Consequently, we are likely to get two different sample=level standard deviations even if the population-level standard deviations are identical for males and females.
+We need to recognize that the sample-level standard deviations are likely to differ from the population-level standard deviation due to sampling error. Consequently, we are likely to get two different sample-level standard deviations even if the population-level standard deviations are identical for males and females.
 
 How do we resolve this situation of having two sample-level standard deviations? The first step is to switch to thinking in terms of variance rather than standard deviation. Due to the way the math works, life becomes very complicated, very quickly, if we continue to think in terms of standard deviations. Therefore, we reframe the problem into a variance problem. Variances are preferable to standard deviations because we can add and subtract variances - but not standard deviations.
 
-We have a sample variance for males () and a sample variance for females (). We view each of these sample variances as an estimate of the respective population variances (see Figure \ref{fig:pool1}). That is, the male sample variance is an estimate of the male population variance. Likewise, the female sample variance is an estimate of the female population variance. However, we also \textbf{assume} that the population variances for males and females are the same. Consequently, the male sample variance and the female sample variance are both estimates of a single population variance (see Figure \ref{fig:pool2}). Because the two sample variances are estimates of the same population variance, we can (when the sample sizes are equal) simple average them to obtain a better estimate of that single population variance. When we combine the two variances together to get a better estimate of the single population variance we can that new variance the pooled variance and represent it with the symbol \(s_{pooled}^2\).
+We have a sample variance for males (92.2) and a sample variance for females (66.8). We view each of these sample variances as an estimate of the respective population variances (see Figure \ref{fig:pool1}). That is, the male sample variance is an estimate of the male population variance. Likewise, the female sample variance is an estimate of the female population variance. However, we also \textbf{assume} that the population variances for males and females are the same. Consequently, the male sample variance and the female sample variance are both estimates of a single population variance (see Figure \ref{fig:pool2}). Because the two sample variances are estimates of the same population variance, we can (when the sample sizes are equal) calculate a new variance by averaging them together. This new variance, the average of the sample variances, provides us with a better estimate of the single population variance. The logic behind this approach is similar to averaging two measurements of the same distance to reduce error. We call this new variance pooled variance; and represent it with the symbol \(s_{pooled}^2\).
 
 \newpage
 
@@ -5474,8 +5481,8 @@ d_{unbiased}  &= d \times [1 - \frac{3}{4(n_{males} + n_{females})-9}] \\
 \end{aligned}
 \]
 
-\hypertarget{asessing-bias}{%
-\subsection{Asessing bias}\label{asessing-bias}}
+\hypertarget{assessing-bias}{%
+\subsection{Assessing bias}\label{assessing-bias}}
 
 We can use our population-level data and sample from it to see the range of sample-level d-values that can occur.
 
@@ -6529,6 +6536,9 @@ With a MAC you can just drag and drop the PDF file into your MSWord document.
        \DataTypeTok{dpi =} \StringTok{"print"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
+
+\hypertarget{hypotheses}{%
+\chapter{Hypotheses}\label{hypotheses}}
 
 \cleardoublepage
 
